[gd_scene load_steps=6 format=3 uid="uid://bumy4g8cy1waj"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_dn86b"]
[ext_resource type="Texture2D" uid="uid://clygaf5xsfjun" path="res://Sprites/PlayerIdle.png" id="2_o7wg1"]
[ext_resource type="Texture2D" uid="uid://bhnnr6hg3dx32" path="res://Sprites/Light.png" id="3_vmks6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4a6i0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iv5yw"]
radius = 14.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 44
script = ExtResource("1_dn86b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4a6i0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.500002, -0.500001)
scale = Vector2(0.96875, 0.96875)
texture = ExtResource("2_o7wg1")

[node name="GhostCollectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostCollectionArea"]
shape = SubResource("CircleShape2D_iv5yw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ReleaseTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.1
texture = ExtResource("3_vmks6")

[connection signal="body_entered" from="GhostCollectionArea" to="." method="_on_ghost_collection_area_body_entered"]
[connection signal="timeout" from="ReleaseTimer" to="." method="_on_release_timer_timeout"]
